This file documents the revision history for Perl extension App::Kaizendo.

0.0.003  2010-xx-xx xx:xx:xx
        - Added tests for the REST API: /_user

0.0.002  2010-06-27 20:33:07
        - t0m's basic app is up and running now, bit no real features yet.

0.0.001  2010-03-10 12:08:07
        - initial revision, generated by Catalyst